--- a/type_4.html
+++ b/type_4.html
@@ -5,24 +5,27 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/reset-css@5.0.2/reset.min.css">
-    <link rel="stylesheet" href="./css/type_2.min.css">
+    <link rel="stylesheet" href="./css/type_4.min.css">
 </head>
 <body>
     <header id="hd">
         <h1><a href="/"><img src="" alt=""></a></h1>
-        <div class="inner">
-            <h1><a href="/"><img src="" alt=""></a></h1>
-            <ul class="gnb">
+        <div>
+            <ul id="gnb">
                 <li><a href="">대메뉴1</a></li>
                 <li><a href="">대메뉴2</a></li>
                 <li><a href="">대메뉴3</a></li>
                 <li><a href="">대메뉴4</a></li>
                 <li><a href="">대메뉴5</a></li>
             </ul>
-            <ui class="iconMenu">
-            <li><i>svgicon</i><span>검색</span></li>
-            <li><i>svgicon</i><span>장바구니</span></li>
-            <li><i>svgicon</i><span>마이페이지</span></li>
-        </ul>
+            
+            <ul class="member">
+                <li class="point"><a href="">구독</a></li>
+                <li><a href="">마이페이지</a></li>
+                <li><a href="">로그인</a></li>
+                <li class="iconcss"><i>svgicon</i><span>검색</span></li>
+            </ul>
+        </div>
+    </header>
 </body>
 </html>
