--- a/type_5.html
+++ b/type_5.html
@@ -5,24 +5,26 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/reset-css@5.0.2/reset.min.css">
-    <link rel="stylesheet" href="./css/type_2.min.css">
+    <link rel="stylesheet" href="./css/type_5.min.css">
 </head>
 <body>
     <header id="hd">
-        <h1><a href="/"><img src="" alt=""></a></h1>
-        <div class="inner">
+        <div class="inner rel">
             <h1><a href="/"><img src="" alt=""></a></h1>
-            <ul class="gnb">
+            <ui class="iconMenu">
+                <li class="global"><i>svgicon</i><span>글로벌</span></li>
+                <li><span>로그인</span></li>
+                <li><span>회원가입</span></li>
+            </ui>
+        </div>
+
+            <ul class="gnb d-flex jcc border-top">
                 <li><a href="">대메뉴1</a></li>
                 <li><a href="">대메뉴2</a></li>
                 <li><a href="">대메뉴3</a></li>
                 <li><a href="">대메뉴4</a></li>
                 <li><a href="">대메뉴5</a></li>
             </ul>
-            <ui class="iconMenu">
-            <li><i>svgicon</i><span>검색</span></li>
-            <li><i>svgicon</i><span>장바구니</span></li>
-            <li><i>svgicon</i><span>마이페이지</span></li>
-        </ul>
+    </header>
 </body>
 </html>
