--- a/type_1.html
+++ b/type_1.html
@@ -10,19 +10,19 @@
 <body>
     <!-- 1 -->
     <header id="hd">
-        <h1><a href="/"><img src="" alt=""></a></h1>
-        <ul id="gnb">
+        <h1><a href="/"><img src="" alt="">로고</a></h1>
+        <ul class="gnb">
             <li><a href="">대메뉴1</a></li>
             <li><a href="">대메뉴2</a></li>
             <li><a href="">대메뉴3</a></li>
             <li><a href="">대메뉴4</a></li>
             <li><a href="">대메뉴5</a></li>
         </ul>
-        <ui class="iconMenu">
+        <ul class="iconMenu">
             <li><i>svgicon</i><span>검색</span></li>
             <li><i>svgicon</i><span>찜</span></li>
             <li><i>svgicon</i><span>장바구니</span></li>
-        </ui>
+        </ul>
         <ul class="member">
             <li><a href="">마이페이지</a></li>
             <li><a href="">로그인</a></li>
