--- a/type_2.html
+++ b/type_2.html
@@ -10,9 +10,9 @@
 <body>
     <!-- 2 -->
     <header id="hd">
-        <div class="inner">
-        <h1><a href="/"><img src="" alt=""></a></h1>
-        <ul class="gnb">
+        <div class="inner d-flex">
+        <h1><a href="/"></a>로고</h1>
+        <ul class="gnb d-flex">
             <li><a href="">대메뉴1</a></li>
             <li><a href="">대메뉴2</a></li>
             <li><a href="">대메뉴3</a></li>
@@ -20,17 +20,17 @@
             <li><a href="">대메뉴5</a></li>
         </ul>
 
-        <ul class="promotion_gnb">
-            <li><a href="">sale</a></li>
-            <li><a href="">s/s</a></li>
+        <ul class="promotion_gnb d-flex mr-auto">
+            <li><a href="" class="text-gray">sale</a></li>
+            <li><a href="" class="text-gray">s/s</a></li>
             <li><a href="">f/w</a></li>
             <li><a href="">event</a></li>
         </ul>
 
-        <ui class="iconMenu">
+        <ul class="iconMenu d-flex">
             <li class="searchform">
                 <div class="bg-gray round50">
-                    <form action="">
+                    <form action="" class="d-flex">
                         <input type="text" placeholder="검색어를 입력해주세요.">
                         <button type="submit">
                             <li>svg</li>
@@ -39,9 +39,9 @@
                     </form>
                 </div>
             </li>
-            <li><i>svgicon</i><span>장바구니</span></li>
-            <li><i>svgicon</i><span>마이페이지</span></li>
-        </ui>
+            <li><i>svgicon</i><span class="sr_only">장바구니</span></li>
+            <li><i>svgicon</i><span class="sr_only">마이페이지</span></li>
+        </ul>
         </div>
     </header>
 </body>
