--- a/type_2.html
+++ b/type_2.html
@@ -4,43 +4,44 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/reset-css@5.0.2/reset.min.css">
+    <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/reset-css@5.0.2/reset.min.css">
+    <link href="//cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="./css/type_2.min.css">
 </head>
 <body>
     <!-- 2 -->
-    <header id="hd">
-        <div class="inner d-flex">
-        <h1><a href="/"></a>로고</h1>
-        <ul class="gnb d-flex">
-            <li><a href="">대메뉴1</a></li>
-            <li><a href="">대메뉴2</a></li>
-            <li><a href="">대메뉴3</a></li>
-            <li><a href="">대메뉴4</a></li>
-            <li><a href="">대메뉴5</a></li>
+    <header id="hd" class="py-3 bg-white border-bottom ">
+        <div class="container d-flex justify-content-between align-items-center">
+        <h1 class="mb-0"><a href="/"></a>로고</h1>
+        <ul class="gnb d-flex ps-0 mb-0">
+            <li class="mx-3"><a href="">대메뉴1</a></li>
+            <li class="mx-3"><a href="">대메뉴2</a></li>
+            <li class="mx-3"><a href="">대메뉴3</a></li>
+            <li class="mx-3"><a href="">대메뉴4</a></li>
+            <li class="mx-3"><a href="">대메뉴5</a></li>
         </ul>
 
-        <ul class="promotion_gnb d-flex mr-auto">
-            <li><a href="" class="text-gray">sale</a></li>
-            <li><a href="" class="text-gray">s/s</a></li>
-            <li><a href="">f/w</a></li>
-            <li><a href="">event</a></li>
+        <ul class="promotion_gnb d-flex d-flex ps-0 mb-0 me-auto">
+            <li class="mx-3"><a href="" class="text-black-50">sale</a></li>
+            <li class="mx-3"><a href="" class="text-black-50">s/s</a></li>
+            <li class="mx-3"><a href="" class="text-black-50">f/w</a></li>
+            <li class="mx-3"><a href="" class="text-black-50">event</a></li>
         </ul>
 
-        <ul class="iconMenu d-flex">
-            <li class="searchform">
-                <div class="bg-gray round50">
+        <ul class="iconMenu d-flex d-flex ps-0 mb-0 me-auto ms-3">
+            <li class="searchform ">
+                <div class="bg-dark rounded-pill overflow-hidden">
                     <form action="" class="d-flex">
-                        <input type="text" placeholder="검색어를 입력해주세요.">
-                        <button type="submit">
-                            <li>svg</li>
-                            <span>검색</span>
+                        <input type="text" class="bg-transparent border-0" placeholder="검색어를 입력해주세요.">
+                        <button type="submit" class="text-white border-0 bg-transparent">
+                            <i>svg</i>
+                            <span class="visually-hidden">검색</span>
                         </button>
                     </form>
                 </div>
             </li>
-            <li><i>svgicon</i><span class="sr_only">장바구니</span></li>
-            <li><i>svgicon</i><span class="sr_only">마이페이지</span></li>
+            <li class="mx-3"><i>svgicon</i><span class="visually-hidden">장바구니</span></li>
+            <li class="mx-3"><i>svgicon</i><span class="visually-hidden">마이페이지</span></li>
         </ul>
         </div>
     </header>
