--- a/type_3.html
+++ b/type_3.html
@@ -4,25 +4,26 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/reset-css@5.0.2/reset.min.css">
-    <link rel="stylesheet" href="./css/type_2.min.css">
+    <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/reset-css@5.0.2/reset.min.css">
+    <link href="//cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link rel="stylesheet" href="/css/type_3.min.css">
 </head>
 <body>
     <header id="hd">
-        <h1><a href="/"><img src="" alt=""></a></h1>
-        <div class="inner">
-            <h1><a href="/"><img src="" alt=""></a></h1>
-            <ul class="gnb">
-                <li><a href="">대메뉴1</a></li>
-                <li><a href="">대메뉴2</a></li>
-                <li><a href="">대메뉴3</a></li>
-                <li><a href="">대메뉴4</a></li>
-                <li><a href="">대메뉴5</a></li>
+        <!-- <h1><a href="/"><img src="" alt=""></a></h1> -->
+        <div class="container py-3 border-bottom d-flex justify-content-between align-items-center">
+            <h1 class="mb-0">로고</a></h1>
+            <ul class="gnb ps-0 mb-0 d-flex">
+                <li class="mx-3"><a href="">대메뉴1</a></li>
+                <li class="mx-3"><a href="">대메뉴2</a></li>
+                <li class="mx-3"><a href="">대메뉴3</a></li>
+                <li class="mx-3"><a href="">대메뉴4</a></li>
+                <li class="mx-3"><a href="">대메뉴5</a></li>
             </ul>
-            <ui class="iconMenu">
-            <li><i>svgicon</i><span>검색</span></li>
-            <li><i>svgicon</i><span>장바구니</span></li>
-            <li><i>svgicon</i><span>마이페이지</span></li>
+            <ul class="iconMenu ps-0 mb-0 d-flex justify-content-end">
+            <li class="mx-3"><i>svgicon</i><span  class="visually-hidden">검색</span></li>
+            <li class="mx-3"><i>svgicon</i><span class="visually-hidden">장바구니</span></li>
+            <li class="ms-3"><i>svgicon</i><span class="visually-hidden">마이페이지</span></li>
         </ul>
 </body>
 </html>
