--- a/type_5.html
+++ b/type_5.html
@@ -4,26 +4,27 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/reset-css@5.0.2/reset.min.css">
-    <link rel="stylesheet" href="./css/type_5.min.css">
+    <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/reset-css@5.0.2/reset.min.css">
+    <link href="//cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link rel="stylesheet" href="/css/type_5.min.css">
 </head>
 <body>
     <header id="hd">
-        <div class="inner rel">
-            <h1><a href="/"><img src="" alt=""></a></h1>
-            <ui class="iconMenu">
-                <li class="global"><i>svgicon</i><span>글로벌</span></li>
-                <li><span>로그인</span></li>
-                <li><span>회원가입</span></li>
-            </ui>
+        <div class="container d-flex justify-content-between align-items-center">
+            <h1 class="mb-0 w-100 d-flex justify-content-center">서브웨이로고</a></h1>
+            <ul class="iconMenu w-0 ps-0 mb-0 d-flex justify-content-end">
+                <li class="global"><i class="text-nowrap">svgicon</i><span class="visually-hidden">글로벌</span></li>
+                <li><span class="text-nowrap">로그인</span></li>
+                <li><span class="text-nowrap">회원가입</span></li>
+            </ul>
         </div>
 
-            <ul class="gnb d-flex jcc border-top">
-                <li><a href="">대메뉴1</a></li>
-                <li><a href="">대메뉴2</a></li>
-                <li><a href="">대메뉴3</a></li>
-                <li><a href="">대메뉴4</a></li>
-                <li><a href="">대메뉴5</a></li>
+            <ul class="gnb d-flex justify-content-center border-top py-3 border-bottom ps-0">
+                <li class="mx-3"><a href="">대메뉴1</a></li>
+                <li class="mx-3"><a href="">대메뉴2</a></li>
+                <li class="mx-3"><a href="">대메뉴3</a></li>
+                <li class="mx-3"><a href="">대메뉴4</a></li>
+                <li class="ms-3"><a href="">대메뉴5</a></li>
             </ul>
     </header>
 </body>
