--- a/type_4.html
+++ b/type_4.html
@@ -4,14 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/reset-css@5.0.2/reset.min.css">
-    <link rel="stylesheet" href="./css/type_4.min.css">
+    <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/reset-css@5.0.2/reset.min.css">
+    <link href="//cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link rel="stylesheet" href="/css/type_4.min.css">
 </head>
 <body>
-    <header id="hd">
-        <h1><a href="/"><img src="" alt=""></a></h1>
-        <div>
-            <ul id="gnb">
+    <header id="hd" class="py-3 px-5">
+        <h1><a href="/">Esquire</a></h1>
+        <div class="d-flex justify-content-between align-items-end">
+            <ul class="gnb d-flex">
                 <li><a href="">대메뉴1</a></li>
                 <li><a href="">대메뉴2</a></li>
                 <li><a href="">대메뉴3</a></li>
@@ -19,11 +20,11 @@
                 <li><a href="">대메뉴5</a></li>
             </ul>
             
-            <ul class="member">
-                <li class="point"><a href="">구독</a></li>
-                <li><a href="">마이페이지</a></li>
+            <ul class="member d-flex">
+                <li class="point mx-3"><a href="" class="test-nowrap d-block py-1 text-white bg-dark">구독</a></li>
+                <li><a href="" class="test-nowrap">마이페이지</a></li>
                 <li><a href="">로그인</a></li>
-                <li class="iconcss"><i>svgicon</i><span>검색</span></li>
+                <li class="iconcss"><i>svgicon</i><span class="visually-hidden">검색</span></li>
             </ul>
         </div>
     </header>
