--- a/type_4.html
+++ b/type_4.html
@@ -10,9 +10,9 @@
 </head>
 <body>
     <header id="hd" class="py-3 px-5">
-        <h1><a href="/">Esquire</a></h1>
+        <h1 class="mb-0"><a href="/">Esquire</a></h1>
         <div class="d-flex justify-content-between align-items-end">
-            <ul class="gnb d-flex">
+            <ul class="gnb d-flex ps-0 mb-0">
                 <li><a href="">대메뉴1</a></li>
                 <li><a href="">대메뉴2</a></li>
                 <li><a href="">대메뉴3</a></li>
@@ -20,7 +20,7 @@
                 <li><a href="">대메뉴5</a></li>
             </ul>
             
-            <ul class="member d-flex">
+            <ul class="member d-flex ps-0 mb-0">
                 <li class="point mx-3"><a href="" class="test-nowrap d-block py-1 text-white bg-dark">구독</a></li>
                 <li><a href="" class="test-nowrap">마이페이지</a></li>
                 <li><a href="">로그인</a></li>
