--- a/type_4.html
+++ b/type_4.html
@@ -20,8 +20,8 @@
                 <li><a href="">대메뉴5</a></li>
             </ul>
             
-            <ul class="member d-flex ps-0 mb-0">
-                <li class="point mx-3"><a href="" class="test-nowrap d-block py-1 text-white bg-dark">구독</a></li>
+            <ul class="member d-flex ps-0 mb-0 align-items-center">
+                <li class="point"><a href="" class="test-nowrap d-block py-1 text-white bg-dark">구독</a></li>
                 <li><a href="" class="test-nowrap">마이페이지</a></li>
                 <li><a href="">로그인</a></li>
                 <li class="iconcss"><i>svgicon</i><span class="visually-hidden">검색</span></li>
