--- a/type_2.html
+++ b/type_2.html
@@ -10,15 +10,40 @@
 </head>
 <body>
     <!-- 2 -->
-    <header id="hd" class="py-3 bg-white border-bottom ">
+    <header id="hd" class="bg-white border-bottom">
         <div class="container d-flex justify-content-between align-items-center">
         <h1 class="mb-0"><a href="/"></a>로고</h1>
         <ul class="gnb d-flex ps-0 mb-0">
-            <li class="mx-3"><a href="">대메뉴1</a></li>
-            <li class="mx-3"><a href="">대메뉴2</a></li>
-            <li class="mx-3"><a href="">대메뉴3</a></li>
-            <li class="mx-3"><a href="">대메뉴4</a></li>
-            <li class="mx-3"><a href="">대메뉴5</a></li>
+            <li class="mx-3 position-relative py-3 ">
+                <a href="" class="d-block">대메뉴1</a>
+                <ul class="position-absolute start-0 w-100 bg-dark ps-0 ">
+                    <li><a href="" class="text-white">sale</a></li>
+                    <li><a href="" class="text-white">sale</a></li>
+                    <li><a href="" class="text-white">sale</a></li>
+                    <li><a href="" class="text-white">sale</a></li>
+                    <li><a href="" class="text-white">sale</a></li>
+                </ul>
+             </li>
+             <li class="mx-3 position-relative py-3 ">
+                <a href="" class="d-block">대메뉴1</a>
+                <ul class="position-absolute start-0 w-100 bg-dark ps-0">
+                    <li><a href="" class="text-white">sale</a></li>
+                    <li><a href="" class="text-white">sale</a></li>
+                    <li><a href="" class="text-white">sale</a></li>
+                    <li><a href="" class="text-white">sale</a></li>
+                    <li><a href="" class="text-white">sale</a></li>
+                </ul>
+             </li>
+             <li class="mx-3 position-relative py-3 ">
+                <a href="" class="d-block">대메뉴1</a>
+                <ul class="position-absolute start-0 w-100 bg-dark ps-0">
+                    <li><a href="" class="text-white">sale</a></li>
+                    <li><a href="" class="text-white">sale</a></li>
+                    <li><a href="" class="text-white">sale</a></li>
+                    <li><a href="" class="text-white">sale</a></li>
+                    <li><a href="" class="text-white">sale</a></li>
+                </ul>
+             </li>
         </ul>
 
         <ul class="promotion_gnb d-flex d-flex ps-0 mb-0 me-auto">
