--- a/type_3.html
+++ b/type_3.html
@@ -9,22 +9,52 @@
     <link rel="stylesheet" href="/css/type_3.min.css">
 </head>
 <body>
-    <header id="hd">
-        <!-- <h1><a href="/"><img src="" alt=""></a></h1> -->
-        <div class="container py-3 border-bottom d-flex justify-content-between align-items-center">
-            <h1 class="mb-0">로고</a></h1>
+    <header id="hd" class="border-bottom">
+        <!-- 필요시 이미지 경로 업데이트 -->
+        <!-- <h1><a href="/"><img src="path/to/logo.png" alt="Logo"></a></h1> -->
+        <div class="container d-flex justify-content-between align-items-center">
+            <h1 class="mb-0"><a href="/">로고가 길쭉해</a></h1>
             <ul class="gnb ps-0 mb-0 d-flex">
-                <li class="mx-3"><a href="">대메뉴1</a></li>
-                <li class="mx-3"><a href="">대메뉴2</a></li>
-                <li class="mx-3"><a href="">대메뉴3</a></li>
-                <li class="mx-3"><a href="">대메뉴4</a></li>
-                <li class="mx-3"><a href="">대메뉴5</a></li>
+                <li class="px-3 position-relative py-4 gnb_li">
+                    <a href="#" class="d-block gnb_a">대메뉴1</a>
+                    <ul class="position-absolute gnb_ul bg-white top-100">
+                        <li class="gnb_li_li"><a href="#">소메뉴</a></li>
+                        <li><a href="#">소메뉴</a></li>
+                        <li><a href="#">소메뉴</a></li>
+                        <li><a href="#">소메뉴</a></li>
+                        <li><a href="#">소메뉴</a></li>
+                    </ul>
+                </li>
+
+                <li class="px-3 position-relative py-4 gnb_li">
+                    <a href="#" class="d-block gnb_a">대메뉴2</a>
+                    <ul class="position-absolute gnb_ul bg-white top-100">
+                        <li><a href="#">소메뉴</a></li>
+                        <li><a href="#">소메뉴</a></li>
+                        <li><a href="#">소메뉴</a></li>
+                        <li><a href="#">소메뉴</a></li>
+                        <li><a href="#">소메뉴</a></li>
+                    </ul>
+                </li>  
+
+                <li class="px-3 position-relative py-4 gnb_li">
+                    <a href="#" class="d-block gnb_a">짧음</a>
+                    <ul class="position-absolute gnb_ul bg-white top-100">
+                        <li><a href="#">소메뉴</a></li>
+                        <li><a href="#">소메뉴</a></li>
+                    </ul>
+                </li>  
+                
+                <li class="px-3 position-relative py-4 gnb_li"><a href="#" class="d-block gnb_a">대메뉴1</a></li>
+                <li class="px-3 position-relative py-4 gnb_li"><a href="#" class="d-block gnb_a">대메뉴2</a></li>
             </ul>
+
             <ul class="iconMenu ps-0 mb-0 d-flex justify-content-end">
-            <li class="mx-3"><i>svgicon</i><span  class="visually-hidden">검색</span></li>
-            <li class="mx-3"><i>svgicon</i><span class="visually-hidden">장바구니</span></li>
-            <li class="ms-3"><i>svgicon</i><span class="visually-hidden">마이페이지</span></li>
-        </ul>
-        
+                <li class="mx-3"><i>svgicon</i><span class="visually-hidden">검색</span></li>
+                <li class="mx-3"><i>svgicon</i><span class="visually-hidden">장바구니</span></li>
+                <li class="ms-3"><i>svgicon</i><span class="visually-hidden">마이페이지</span></li>
+            </ul>
+        </div>
+    </header>
 </body>
 </html>
