--- a/type_3.html
+++ b/type_3.html
@@ -17,7 +17,7 @@
             <ul class="gnb ps-0 mb-0 d-flex">
                 <li class="px-3 position-relative py-4 gnb_li">
                     <a href="#" class="d-block gnb_a">대메뉴1</a>
-                    <ul class="position-absolute gnb_ul bg-white top-100">
+                    <ul class="position-absolute gnb_ul top-100">
                         <li class="gnb_li_li"><a href="#">소메뉴</a></li>
                         <li><a href="#">소메뉴</a></li>
                         <li><a href="#">소메뉴</a></li>
@@ -28,7 +28,7 @@
 
                 <li class="px-3 position-relative py-4 gnb_li">
                     <a href="#" class="d-block gnb_a">대메뉴2</a>
-                    <ul class="position-absolute gnb_ul bg-white top-100">
+                    <ul class="position-absolute gnb_ul top-100">
                         <li><a href="#">소메뉴</a></li>
                         <li><a href="#">소메뉴</a></li>
                         <li><a href="#">소메뉴</a></li>
@@ -39,7 +39,7 @@
 
                 <li class="px-3 position-relative py-4 gnb_li">
                     <a href="#" class="d-block gnb_a">짧음</a>
-                    <ul class="position-absolute gnb_ul bg-white top-100">
+                    <ul class="position-absolute gnb_ul top-100">
                         <li><a href="#">소메뉴</a></li>
                         <li><a href="#">소메뉴</a></li>
                     </ul>
@@ -56,5 +56,6 @@
             </ul>
         </div>
     </header>
+    <img src="https://www.cjone.com/cjmweb/upfile/20240422_18f0315b66231.jpg" alt="">
 </body>
 </html>
